--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,13 @@
-fastapi
-uvicorn[standard]
+fastapi>=0.100.0
+uvicorn[standard]>=0.20.0
+pydantic>=2.0.0
+python-multipart>=0.0.6
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-decouple>=3.8
+httpx>=0.25.0
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+supabase>=2.0.0
+requests>=2.31.0
+python-dotenv>=1.0.0
