--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,35 +1,6 @@
-# Core FastAPI framework
+# Simple requirements for Gemini chat functionality
 fastapi>=0.100.0
 uvicorn[standard]>=0.20.0
-
-# Data validation and settings
 pydantic>=2.0.0
-pydantic-settings>=2.0.0
-
-# Authentication and security
-python-multipart>=0.0.6
-python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
-
-# Environment configuration
-python-decouple>=3.8
 python-dotenv>=1.0.0
-
-# HTTP client and testing
-httpx>=0.25.0
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-
-# Supabase (replaces PostgreSQL + SQLAlchemy)
-supabase>=2.0.0
-requests>=2.31.0
-
-# AI and external services
 google-generativeai>=0.3.0
-wikipedia>=1.4.0
-
-# Performance and monitoring (optional)
-redis>=4.5.0
-celery>=5.3.0
-slowapi>=0.1.8
-python-json-logger>=2.0.0
